--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
     margin: 0;
 }
 .toggle-fullscreen {
-    background: blacl;
+    background: black;
     border: none;
     color: black;
     cursor: pointer;
